--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,6 @@ build-backend = "flit_core.buildapi"
 [tool.flit.metadata]
 module = "libimobiledevice"
 author = "Rick Mark"
-author-email = "rickmark@guardianapp.com"
+author-email = "rickmark@outlook.com"
 home-page = "https://github.com/libimobiledevice/python-libimobiledevice"
 
